--- a/www/index.html
+++ b/www/index.html
@@ -1,31 +1,55 @@
-<!DOCTYPE html>
-<html>
+<DOCTYPE HTML>
+    <html lang="en">
 <head>
-	<title>Calculadora de Eficiência do Veículo</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Calcular</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+    <script src="components/loader.js"></script>
+    <script type="text/javascript" src="components/car.js"></script>
+    <link rel="stylesheet" href="components/loader.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<h1>Calculadora de Eficiência do Veículo</h1>
-	 Marca <select name="Marca">
-            <option value="ford">ford</option>
-            <option value="fiat">fiat</option>
-            <option value="chevrolet">chevrolet</option>
-            <option value="hyunday">hyunday</option>
-            <option value="vw">VW</option>
-            </select><br><br>
+<body onload="olamundo()">
+    <div class="fundo">
+    <form class="container">
+ 
+ <h3 class="carro">Calcule o consumo de gasolina</h3>
 
-	<label for="modelo">Modelo:</label>
-	<input type="text" id="modelo"><br><br>
+	<input type="number" placeholder="Insira a kmm percorrida" id="km">
+    <input type="number" placeholder="Insira o consumo de gasolina" id="gas">
+    <button onclick="calcularconsumo()">Calcular</button>
+    <br>
+    <div class= "linha">
+      
+    <span id="consumo"></span>
+           <span>
+    <h3 style="font-family= Arial">KM/L</h3>
+           </span>
+    </div>
+    </form>
 
-	<label for="quilometragem">Quilometragem percorrida:</label>
-	<input type="number" id="quilometragem"><br><br>
+    <table border="3px">
+  <tr id="Extremamente">
+    <td><=20km/l | Extremamente Econômico</td>
 
-	<label for="litros">Quantidade de litros de combustível gastos:</label>
-	<br><br><input type="number" id="litros"><br><br>
+  </tr>
+  <tr id="Economico">
+    <td> <=12km/l---->20km/l | Econômico</td>
 
-	<button onclick="calcularEficiencia()">Calcular Eficiência</button>
-    
-	<p id="resultado"></p>
-    <script src="components/car.js">
+  </tr>
+  <tr id="Normal">
+    <td> <=8km/l---->12km/l | Normal</td>
+
+  </tr>
+  <tr id="Alto">
+    <td>>=8km/l | Alto consumo</td>
+
+  </tr>
+</table>
+
+</div>
 </body>
 </html>
-
